Show available companies.

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,14 +1,15 @@
 <header>
   <div class="container">
       <h1 id="logo">
-        <a href="/">
+        <%= link_to root_path do %>
           <%= image_tag "logo_noel.png" %> <span>Ruby Türkiye</span>
-        </a>
+        <% end %>
       </h1>
 
       <nav>
         <ul>
-          <li><a href="/people">Topluluk</a></li>
+          <li><%= link_to "Topluluk", people_path %></li>
+          <li><%= link_to 'Şirketler', companies_path %></li>
           <li><%= link_to "Mail Grubu", page_path("group") %></li>
           <li><%= link_to "#ruby-tr IRC", page_path("irc") %></li>
         </ul>
