--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -6,5 +6,7 @@
         <li><%= c.name %> <%= link_to c.web, c.web, target: '_blank' %></li>
       <% end %>
     </ul>
+    <%= link_to('Şirket Ekle', new_company_path, class: 'btn btn-lg btn-success') %>  
   </div>
 </div>
+
