--- a/app/views/pages/main.html.erb
+++ b/app/views/pages/main.html.erb
@@ -24,7 +24,7 @@
         <aside>
           <h3>Ruby Türkiye nedir?</h3>
           <p>
-            Türkiye'deki Ruby programcıları ve Ruby severler topluluğudur. Ruby ile program yazan ve ilgilenen herkese kapımız açıktır.
+            Türkiye'deki Ruby programcıları ve Ruby severler topluluğudur. Ruby ile program yazan ve ilgilenen herkese kapımız açıktır. <%= link_to "Devamı >>>", page_path("about") %>
           </p>
 
           <h3>Nasıl iletişim kurabilirim?</h3>
@@ -38,7 +38,7 @@
             IRC kanalımızda veya mail listemizde sorularınızı paylaşabilirsiniz.
           </p>
 
-          <a class="btn btn-default btn-warning btn-lg btn-block" href="https://groups.google.com/forum/#!forum/ruby-tr">Mail Listemize Kaydolun!</a>
+          <a class="btn btn-default btn-warning btn-lg btn-block" href="https://github.com/rubytr/ruby-tr">Fork me on Github!</a>
         </aside>
       </div>
       <!--/ .col-md-4 -->
