Add ruby book link.

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,6 +11,7 @@
           <li><a href="/people">Topluluk</a></li>
           <li><%= link_to "Mail Grubu", page_path("group") %></li>
           <li><%= link_to "#ruby-tr IRC", page_path("irc") %></li>
+          <li><%= link_to "Kitap", "http://www.rubykitabi.com/", target: "blank" %></li>
         </ul>
       </nav>
     
