Style changes v2, united from bootswatch...

--- a/app/assets/stylesheets/_config.css.scss
+++ b/app/assets/stylesheets/_config.css.scss
@@ -1,4 +1,4 @@
-$font-family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+// $font-family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 
 // Colors
 $base: #585450;
@@ -9,4 +9,3 @@ $copy: #555555;
 
 $twitter: #00acee;
 $github: #000000;
-$red: #f00;
