Some minor fixes v1...

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,12 +8,12 @@
 
       <nav>
         <ul>
-          <li><a href="/people">Topluluk</a></li>
+          <li><%= link_to "Topluluk", people_path %></li>
           <li><%= link_to "Mail Grubu", page_path("group") %></li>
           <li><%= link_to "#ruby-tr IRC", page_path("irc") %></li>
         </ul>
       </nav>
-    
+
   </div>
   <!--/ .container -->
 </header>
