Analytics on rack v1...

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
-  <h1 id="logo">
+  <h1 id="logo" class="pull-left">
     <a href="/">
       <%= image_tag "logo.png" %> <span>Ruby Türkiye</span>
     </a>
   </h1>
-  <nav>
+  <nav class="pull-left">
     <ul>
       <li><a href="/people">Topluluk</a></li>
       <li><%= link_to "Mail Grubu", page_path("group") %></li>
