--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,6 @@
 <div class="container">
-  <p class="pull-left">&copy; <%= Time.now.year %> - Ruby Türkiye</p>
+  <p class="pull-left">&copy; 2013-<%= Time.now.year %> - Ruby Türkiye</p>
+  <p class="pull-right"><a href="https://github.com/rubytr/ruby-tr">Site Kaynak Kodu</a></p>
 </div>
 <%= jquery_include_tag :google %>
 <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
@@ -8,14 +9,3 @@
   <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
   <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
 <![endif]-->
-<script type="text/javascript">
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-XXXXX-X']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-</script>
