--- a/app/assets/stylesheets/_config.css.scss
+++ b/app/assets/stylesheets/_config.css.scss
@@ -1,4 +1,4 @@
-// $font-family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+$font-family: 'Open Sans', sans-serif;
 
 // Colors
 $base: #585450;
