--- a/app/views/pages/irc.html.erb
+++ b/app/views/pages/irc.html.erb
@@ -1,9 +1,11 @@
-<div class="content">
-  <div class="container">
-    <h2>Ruby Türkiye IRC Kanalı</h2>
-    <iframe src="http://webchat.freenode.net?channels=%23ruby-tr" width="100%" height="600"></iframe>
-    <!-- https://support.google.com/groups/answer/1191206?hl=en --> 
+<div class="container">
+  <div class="row gutter-20-xs gutter-out-xs left-lg">
+    <div class="xs-1">
+      <div class="page-header">
+        <h2>Ruby Türkiye IRC Kanalı</h2>
+      </div>
+      <iframe src="http://webchat.freenode.net?channels=%23ruby-tr" width="100%" height="600"></iframe>
+      <!-- https://support.google.com/groups/answer/1191206?hl=en -->
+    </div>
   </div>
-  <!--/ .container -->
 </div>
-<!--/ .content -->
