--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,19 +1,22 @@
-<header>
+<header class="animated fadeIn">
   <div class="container">
-      <h1 id="logo">
-        <a href="/">
-          <%= image_tag "logo.png" %> <span>Ruby Türkiye</span>
-        </a>
-      </h1>
-
-      <nav>
-        <ul>
-          <li><a href="/people">Topluluk</a></li>
-          <li><%= link_to "Mail Grubu", page_path("group") %></li>
-          <li><%= link_to "#ruby-tr IRC", page_path("irc") %></li>
-        </ul>
-      </nav>
-    
+    <div class="row gutter-20-xs gutter-out-xs left-lg">
+      <div class="lg-12-4">
+        <h1><a href="/"><%= image_tag "ruby-logo@2x.png" %>Ruby <span>Türkiye</span></a></h1>
+      </div>
+      <div class="lg-12-8">
+        <div class="row gutter-10-xs nav">
+          <div class="lg-3-1">
+            <a href="/people">Topluluk</a>
+          </div>
+          <div class="lg-3-1">
+            <%= link_to "Mail Grubu", page_path("group") %>
+          </div>
+          <div class="lg-3-1">
+            <%= link_to "#ruby-tr IRC", page_path("irc") %>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  <!--/ .container -->
 </header>
