--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -14,7 +14,7 @@
     <div class="xs-1">
       <div class="row gutter-10-xs center-lg">
         <% @persons.each do |item| %>
-          <div class="lg-3-1 md-2-1">
+          <div class="xl-4-1 lg-3-1 md-2-1">
             <div class="thumbnail">
               <div class="image-circle">
                 <img src="<%= item.gravatar_url %>?s=250" width="125">
