--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -131,6 +131,7 @@
   .thumbnail {
     border-radius: 3px;
     border: 1px solid #e8e8e8;
+    background: #f5f5f5;
     padding: 10px;
     margin-bottom: 20px;
   }
