--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -6,13 +6,16 @@
       </div>
       <div class="lg-12-8">
         <div class="row gutter-10-xs nav">
-          <div class="lg-3-1">
+          <div class="lg-4-1">
             <a href="/people">Topluluk</a>
           </div>
-          <div class="lg-3-1">
+          <div class="lg-4-1">
+            <a href="/jobs">İşler</a>
+          </div>
+          <div class="lg-4-1">
             <%= link_to "Mail Grubu", page_path("group") %>
           </div>
-          <div class="lg-3-1">
+          <div class="lg-4-1">
             <%= link_to "#ruby-tr IRC", page_path("irc") %>
           </div>
         </div>
