Use Ruby style.

--- a/app/views/pages/main.html.erb
+++ b/app/views/pages/main.html.erb
@@ -31,7 +31,7 @@
         <ul class="connect-links">
           <li><%= link_to "#ruby-tr (IRC/freenode)", page_path("irc") %></li>
           <li><%= link_to "Ruby Türkiye google mail grubu", page_path("group") %></li>
-          <li><a href="https://rubytr.slack.com">Slack</a> üzerinden</li>
+          <li><%= link_to "Slack", "https://rubytr.slack.com" %></li>
         </ul>
 
         <h3>Nasıl yardım alabilirim ?</h3>
