Stop job feature.

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -9,9 +9,9 @@
           <div class="lg-4-1">
             <a href="/people">Topluluk</a>
           </div>
-          <div class="lg-4-1">
+<!--           <div class="lg-4-1">
             <a href="/jobs">İşler</a>
-          </div>
+          </div> -->
           <div class="lg-4-1">
             <%= link_to "Mail Grubu", page_path("group") %>
           </div>
