--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -157,7 +157,9 @@ textarea {
   .thumbnail h3{
     margin: 10px 0;
     font-weight: normal;
-
+  }
+  .person-thumbnail {
+    min-height: 223px;
   }
 
   .list-item {
