--- a/app/views/pages/main.html.erb
+++ b/app/views/pages/main.html.erb
@@ -10,7 +10,7 @@
       <div class="news">
         <h2>Hakkımızda sayfası güncellenmiştir</h2>
         <p>
-          Topluluğumuz üyelerini bulabileceğiniz sayfamız güncellenmiş olup, <%= link_to 'buradan', people_path %> erişebilirsiniz.
+          Topluluğumuz üyelerini bulabileceğiniz sayfamız güncellenmiş olup, <%= link_to 'buradan', users_path %> erişebilirsiniz.
         </p>
       </div>
       <div class="news">
@@ -39,7 +39,7 @@
           IRC kanalımızda veya mail listemizde sorularınızı paylaşabilirsiniz.
         </p>
 
-        <a class="btn" href="https://groups.google.com/forum/#!forum/ruby-tr"><i class="fa fa-envelope"></i> Mail Listemize Kaydolun!</a>
+        <a class="btn btn-green" href="https://groups.google.com/forum/#!forum/ruby-tr"><i class="fa fa-envelope"></i> Mail Listemize Kaydolun!</a>
       </aside>
     </div>
   </div>
