--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -7,7 +7,7 @@
       <div class="lg-12-8">
         <div class="row gutter-10-xs nav">
           <div class="lg-4-1">
-            <a href="/people">Topluluk</a>
+            <a href="/users">Topluluk</a>
           </div>
 <!--           <div class="lg-4-1">
             <a href="/jobs">İşler</a>
@@ -18,6 +18,13 @@
           <div class="lg-4-1">
             <%= link_to "#ruby-tr IRC", page_path("irc") %>
           </div>
+          <% if current_user %>
+            <div class="lg-4-1">
+              <%= link_to edit_user_registration_path, class: 'user-name' do %>
+                <i class="fa fa-user"></i> <%= current_user.name %>
+              <% end %>
+            </div>
+          <% end %>
         </div>
       </div>
     </div>
