--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,15 +5,15 @@
         <h2>Yeni Kişi Kaydı</h2>
       </div>
 
-        <%= form_for @person do |f| %>
+        <%= form_for @user do |f| %>
           <div class="row gutter-20-xs left-lg">
             <div class="lg-12-3 form-title">
               <%= f.label :name %>
             </div>
             <div class="lg-12-5">
               <%= f.text_field :name, class: "form-control" %>
-              <% if @person.errors.has_key?(:name) %>
-                <em class="error"><%= @person.errors[:name].join(',') %></em>
+              <% if @user.errors.has_key?(:name) %>
+                <em class="error"><%= @user.errors[:name].join(',') %></em>
               <% end %>
             </div>
           </div>
@@ -24,8 +24,8 @@
             </div>
             <div class="lg-12-5">
               <%= f.text_field :email, class: "form-control" %>
-              <% if @person.errors.has_key?(:email) %>
-                <em class="error"><%= @person.errors[:email].join(',') %></em>
+              <% if @user.errors.has_key?(:email) %>
+                <em class="error"><%= @user.errors[:email].join(',') %></em>
               <% end %>
             </div>
           </div>
@@ -46,11 +46,11 @@
           </div>
 
           <div class="row gutter-20-xs left-lg">
-            <div class="lg-12-3 form-title"><%= f.label :humanizer_answer, @person.humanizer_question %></div>
+            <div class="lg-12-3 form-title"><%= f.label :humanizer_answer, @user.humanizer_question %></div>
             <div class="lg-12-5">
               <%= f.text_field :humanizer_answer, class: "form-control" %>
-              <% if @person.errors.has_key?(:humanizer_answer) %>
-                <%= @person.errors[:humanizer_answer].join(',') %>
+              <% if @user.errors.has_key?(:humanizer_answer) %>
+                <%= @user.errors[:humanizer_answer].join(',') %>
               <% end %>
             </div>
           </div>
