Update button title.

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,7 +8,7 @@
     <div class="lg-12-3">
       <% unless current_user %>
         <%= link_to user_omniauth_authorize_path(:github), class: "btn btn-github" do %>
-          <i class="fa fa-github"></i> Github Ile Giriş Yap
+          <i class="fa fa-github"></i> Github ile Kayıt Ol
         <% end %>
       <% end %>
       <br/>
