--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -4,14 +4,20 @@
       <%= gravatar_picture user %>
     </div>
     <h3><%= user.name %></h3>
-    <%= link_to twitter_url(user), class: "link", target: "blank", title: "Twitter" do %>
-      <i class="fa fa-twitter fa-2x"></i>
+    <% unless person.twitter.empty? %>
+      <%= link_to twitter_url(user), class: "link", target: "blank", title: "Twitter" do %>
+        <i class="fa fa-twitter fa-2x"></i>
+      <% end %>
     <% end %>
-    <%= link_to github_url(user), class: "link", target: "blank", title: "Github" do %>
-      <i class="fa fa-github  fa-2x"></i>
+    <% unless person.github.empty? %>
+      <%= link_to github_url(user), class: "link", target: "blank", title: "Github" do %>
+        <i class="fa fa-github  fa-2x"></i>
+      <% end %>
     <% end %>
-    <%= link_to url_with_protocol(user.web), class: "link", target: "blank", title: "Blog" do %>
-      <i class="fa fa-bookmark fa-2x"></i>
+    <% unless person.web.empty? %>
+      <%= link_to url_with_protocol(user.web), class: "link", target: "blank", title: "Blog" do %>
+        <i class="fa fa-bookmark fa-2x"></i>
+      <% end %>
     <% end %>
   </div>
 </div>
