--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -4,17 +4,17 @@
       <%= gravatar_picture user %>
     </div>
     <h3><%= user.name %></h3>
-    <% unless person.twitter.empty? %>
+    <% unless user.twitter.blank? %>
       <%= link_to twitter_url(user), class: "link", target: "blank", title: "Twitter" do %>
         <i class="fa fa-twitter fa-2x"></i>
       <% end %>
     <% end %>
-    <% unless person.github.empty? %>
+    <% unless user.github.blank? %>
       <%= link_to github_url(user), class: "link", target: "blank", title: "Github" do %>
         <i class="fa fa-github  fa-2x"></i>
       <% end %>
     <% end %>
-    <% unless person.web.empty? %>
+    <% unless user.web.blank? %>
       <%= link_to url_with_protocol(user.web), class: "link", target: "blank", title: "Blog" do %>
         <i class="fa fa-bookmark fa-2x"></i>
       <% end %>
