--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -171,6 +171,7 @@ textarea {
     background: #f5f5f5;
     padding: 10px;
     margin-bottom: 20px;
+    min-height: 223px;
   }
   .thumbnail a {
     display: inline-block;
