Ilk kaynak ekleme denemesi...

--- a/app/views/pages/main.html.erb
+++ b/app/views/pages/main.html.erb
@@ -2,22 +2,13 @@
   <div class="row gutter-20-xs gutter-out-xs left-xs">
     <div class="xl-12-8 lg-12-7">
       <div class="news">
-        <h2>Mail grubumuz ve IRC kanalımız hakkında</h2>
-        <p>
-          Topluluğumuz Google mail grubuna ve IRC kanalına (#ruby-tr) artık sitemiz üzerinden ulaşabilirsiniz. Üstteki linklerden mail grubumuza ya da IRC kanalımıza kolayca erişebilirsiniz.
-        </p>
-      </div>
-      <div class="news">
-        <h2>Hakkımızda sayfası güncellenmiştir</h2>
-        <p>
-          Topluluğumuz üyelerini bulabileceğiniz sayfamız güncellenmiş olup, <%= link_to 'buradan', users_path %> erişebilirsiniz.
-        </p>
-      </div>
-      <div class="news">
-        <h2>Ruby Türkiye sitesi yayında</h2>
-        <p>
-          Ruby Türkiye topluluğu olarak sitemiz yayına girmiş bulunmaktadır. Uzun süredir yayına almak istediğimiz bu site, soğuk bir kış akşamı sıcak bir muhabbet ortamı yakaladığımız IRC kanalında bir anda hayata geçmeye başlamış ve çok kısa bir süre içinde tamamlanmıştır :)
-        </p>
+        <h2>Merhaba, Ruby'e yeni mi başlıyorsun?</h2>
+        <p>* Ruby'e giriş yapmadan evvel veri yapıları, programlama mantığı gibi temel bilgilere sahip olmanı ve okuduğunu anlayabilecek seviyede İngilizce bildiğini varsayıyoruz.</p>
+        <p>* Tarayıcında <a href="http://tryruby.org/">Try Ruby</a>'i açarak Ruby ile oynayabilir,</p>
+        <p>* Aşağıdaki Türkçe kitaplardan birini edinebilirsin:</p>
+        <p>** <a href="https://www.dikeyeksen.com/products/ruby">Ruby (Sıtkı Bağdat)</a></p>
+        <p>** <a href="http://www.kodlab.com/BookDetail.aspx?ID=134405">Ruby Programlama (Ender Kuş)</a></p>
+        <p>* İngilizce kitaplar için ise, <a href="https://github.com/vhf/free-programming-books/blob/master/free-programming-books.md#ruby">bu adreste</a> ücretsiz okuyabileceğiniz kitaplar listesine erişebilirsiniz.</p>
       </div>
     </div>
     <div class="xl-12-4 lg-12-5">
