Kaynaklar ayrı bir sayfaya...

--- a/app/views/pages/main.html.erb
+++ b/app/views/pages/main.html.erb
@@ -2,13 +2,8 @@
   <div class="row gutter-20-xs gutter-out-xs left-xs">
     <div class="xl-12-8 lg-12-7">
       <div class="news">
-        <h2>Merhaba, Ruby'e yeni mi başlıyorsun?</h2>
-        <p>* Ruby'e giriş yapmadan evvel veri yapıları, programlama mantığı gibi temel bilgilere sahip olmanı ve okuduğunu anlayabilecek seviyede İngilizce bildiğini varsayıyoruz.</p>
-        <p>* Tarayıcında <a href="http://tryruby.org/">Try Ruby</a>'i açarak Ruby ile oynayabilir,</p>
-        <p>* Aşağıdaki Türkçe kitaplardan birini edinebilirsin:</p>
-        <p>** <a href="https://www.dikeyeksen.com/products/ruby">Ruby (Sıtkı Bağdat)</a></p>
-        <p>** <a href="http://www.kodlab.com/BookDetail.aspx?ID=134405">Ruby Programlama (Ender Kuş)</a></p>
-        <p>* İngilizce kitaplar için ise, <a href="https://github.com/vhf/free-programming-books/blob/master/free-programming-books.md#ruby">bu adreste</a> ücretsiz okuyabileceğiniz kitaplar listesine erişebilirsiniz.</p>
+        <h2>Kaynaklar sayfası eklendi.</h2>
+        <p><a href="./resources">Buradan</a> ya da üstteki menü çubuğundan erişebilirsiniz.</p>
       </div>
     </div>
     <div class="xl-12-4 lg-12-5">
