--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -9,9 +9,14 @@
           <div class="lg-4-1">
             <a href="/users">Topluluk</a>
           </div>
-<!--           <div class="lg-4-1">
+          <div class="lg-4-1">
+            <a href="/resources">Kaynaklar</a>
+          </div>
+          <!--
+          <div class="lg-4-1">
             <a href="/jobs">İşler</a>
-          </div> -->
+          </div>
+          -->
           <div class="lg-4-1">
             <%= link_to "Mail Grubu", page_path("group") %>
           </div>
