Added Slack buttons. Fixes #44

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -265,7 +265,7 @@ textarea {
     margin: 5px 15px;
   }
   ul li a,ol li a{
-    display: block;
+    // display: block;
     margin: 10px 0;
     color: #222;
     font-weight: normal;
