--- a/app/views/pages/main.html.erb
+++ b/app/views/pages/main.html.erb
@@ -2,6 +2,12 @@
   <div class="row gutter-20-xs gutter-out-xs left-xs">
     <div class="xl-12-8 lg-12-7">
       <div class="news">
+        <h2>Slack kanalımız hakkında</h2>
+        <p>
+          Topluluğumuz Slack kanalına (#rubytr) artık sitemiz üzerinden ulaşabilirsiniz. Üstteki linklerden Slack kanalımıza kolayca erişebilirsiniz.
+        </p>
+      </div>
+      <div class="news">
         <h2>Mail grubumuz ve IRC kanalımız hakkında</h2>
         <p>
           Topluluğumuz Google mail grubuna ve IRC kanalına (#ruby-tr) artık sitemiz üzerinden ulaşabilirsiniz. Üstteki linklerden mail grubumuza ya da IRC kanalımıza kolayca erişebilirsiniz.
@@ -30,8 +36,8 @@
         <h3>Nasıl iletişim kurabilirim ?</h3>
         <ul class="connect-links">
           <li><%= link_to "#ruby-tr (IRC/freenode)", page_path("irc") %></li>
-          <li><%= link_to "Ruby Türkiye google mail grubu", page_path("group") %></li>
-          <li><%= link_to "Slack", "https://rubytr.slack.com" %></li>
+          <li><%= link_to "Mail Grubu", page_path("group") %></li>
+          <li><%= link_to "Slack Kanalı", "https://rubytr.slack.com" %></li>
         </ul>
 
         <h3>Nasıl yardım alabilirim ?</h3>
