Companies sayfaları tamamlandı.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,8 @@
 @import "animate.min";
 @import "font-awesome";
 @import "config";
+@import "bootstrap-sprockets";
+@import "bootstrap";
 
 /* Wrapper */
 
