--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -48,6 +48,12 @@
         <div class="row gutter-20-xs left-lg">
           <div class="lg-12-5"><%= f.button :submit, "Firma Ekle" %></div>
         </div>
+
+        <hr \>
+
+        <div class="row gutter-20-xs left-lg">
+          <div class="alert alert-warning" role="alert">Firmanız yönetici onayından sonra görünür olacaktır.</div>
+        </div>
       <% end %>
     </div>
   </div>
