--- a/app/views/pages/main.html.erb
+++ b/app/views/pages/main.html.erb
@@ -2,6 +2,12 @@
   <div class="row gutter-20-xs gutter-out-xs left-xs">
     <div class="xl-12-8 lg-12-7">
       <div class="news">
+        <h2>Firmalar dizini açılmıştır</h2>
+        <p>
+          Ruby, Ruby on Rails gibi teknolojileri kullanan firmaları derlediğimiz bir dizin oluşturduk. Sizde dizine girerek firmanızı <%= link_to "ekleyebilir", new_company_path %> veya diğer <%= link_to "firmalara", companies_path %> göz atabilirsiniz.
+        </p>
+      </div>
+      <div class="news">
         <h2>Slack kanalımız hakkında</h2>
         <p>
           Topluluğumuz Slack kanalına (#rubytr) artık sitemiz üzerinden ulaşabilirsiniz. Üstteki linklerden Slack kanalımıza kolayca erişebilirsiniz.
