--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -6,24 +6,29 @@
       </div>
       <div class="lg-12-8">
         <div class="row gutter-10-xs nav">
-          <div class="lg-5-1">
+          <div class="lg-6-1">
             <%= link_to users_path do %>
               <%= fa_icon "users", text: "Topluluk" %>
             <% end %>
           </div>
-          <div class="lg-5-1">
+          <div class="lg-6-1">
             <%= link_to page_path("group") do %>
               <%= fa_icon "envelope", text: "Mail Grubu" %>
             <% end %>
           </div>
-          <div class="lg-5-1">
+          <div class="lg-6-1">
             <%= link_to page_path("irc") do %>
               <%= fa_icon "hashtag", text: "IRC" %>
             <% end %>
           </div>
-          <div class="lg-5-1">
+          <div class="lg-6-1">
             <%= link_to "https://rubytr.herokuapp.com/", target: "_blank" do %>
               <%= fa_icon "slack", text: "Slack" %>
+            <% end %>
+          </div>
+          <div class="lg-6-1">
+            <%= link_to companies_path do %>
+              <%= fa_icon "building", text: "Firmalar" %>
             <% end %>
           </div>
           <% if current_user %>
